--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Stencil Component Starter</title>
-
+    <title>Avocado POC</title>
     <script type="module" src="/build/avocado-components-pov.esm.js"></script>
     <script nomodule src="/build/avocado-components-pov.js"></script>
   </head>
