fixed also the class issue, gosh im so smart

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         title: 'Name',
         id: 'name',
         hasSorting: true,
-        class: "pink-class"
+        class: "primary-blue"
       },
       {
         title: 'Date',
