--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
     <title>Avocado POC</title>
     <link rel="stylesheet" type="text/css" href="./assets/fontawesome/css/all.css">
+    <link href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" rel="stylesheet">
     <script type="module" src="/build/avocado-components-pov.esm.js"></script>
     <script nomodule src="/build/avocado-components-pov.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
   </head>
   <body>
     <div>
